--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:17
 WORKDIR /app
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-COPY src ./src
+COPY ../../../.mvn .mvn
+COPY ../../../mvnw pom.xml ./
+COPY ../.. ./src
 RUN chmod +x ./mvnw
 CMD ["./mvnw","docker:build"]
